Base site largely formatted correctly, still need to fix bottom image alignment to both left and right of top image, need to make responsive, and fix fonts and colors a touch.

--- a/framework/css/main.css
+++ b/framework/css/main.css
@@ -1,13 +1,18 @@
 * {
+	border: 1px solid red !important;
+}
+* {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-ms-box-sizing: border-box;
 	box-sizing: border-box;
 }
-*{
-	font-family: 'Lato', sans-serif;
-}
 
+@media only screen and (max-width: 300px) {
+	p {
+		background-color: blue;
+	}
+}
 
 .row {
 	width: 100%;
@@ -46,38 +51,4 @@
 }
 .col-11 {
 	width: 91.66%;
-}
-
-.right-align {
-	text-align: right;
-}
-.center {
-	text-align: center;
-}
-.margin-left {
-	margin-left: 20px;
-}
-.fixed {
-	width: 960px;
-}
-
-.logo {
-	width: 100px;
-}
-
-a {
-	text-decoration: none;
-	color: #gray;
-}
-a:visited {
-	color: gray;
-}
-ul {
-	list-style-type: none;
-	margin-left: 0;
-	padding-left: 0;
-}
-li {
-	margin-left: 0;
-	padding-left: 0;
 }
